syntax="proto3";
package hello;
option go_package = "/gen";

import "google/protobuf/timestamp.proto";

service ChatRoom {
    rpc Join(JoinRequest) returns (stream Message) {}
    rpc SendMessage(Message) returns (Exit) {}
}

message User {
    string id = 1;
    string name = 2;
}

message Message {
    string id = 1;
    string roomID = 2;
    string message = 3;
    google.protobuf.Timestamp timestamp = 4;
}

message JoinRequest {
    string roomID = 1;
    User user = 2;
}

message Exit {}